--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,5 @@
 RewriteEngine On
-RewriteBase /bowa-bowaan/
+RewriteBase /bato-min-dlc/
 
 # Exclude assets from rewrite rule
 RewriteCond %{REQUEST_URI} !\.(css|js|svg|jpg|jpeg|png|gif|woff2|ico|ttf)$ [NC]
@@ -7,9 +7,9 @@ RewriteCond %{REQUEST_URI} !\.(css|js|svg|jpg|jpeg|png|gif|woff2|ico|ttf)$ [NC]
 # Redirect all requests to index.html
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ /bowa-bowaan/public/index.html [L]
+RewriteRule ^(.*)$ /bato-min-dlc/public/index.html [L]
 
 # Exclude the public and app directories from the rewrite rule
-RewriteCond %{REQUEST_URI} !^/bowa-bowaan/public/
-RewriteCond %{REQUEST_URI} !^/bowa-bowaan/app/
-RewriteRule ^(.*)$ /bowa-bowaan/public/$1 [L]
+RewriteCond %{REQUEST_URI} !^/bato-min-dlc/public/
+RewriteCond %{REQUEST_URI} !^/bato-min-dlc/app/
+RewriteRule ^(.*)$ /bato-min-dlc/public/$1 [L]
